# datashark-agent

./: INSTALL.md  INSTALL_MARIADB.md  INSTALL_POSTGRESQL.md  README.md  datashark-cleanup-worker@.service  datashark.dist.yml  datashark.service  pyproject.toml  setup-service.ps1  setup-service.sh  setup.cfg  setup.ps1  setup.sh
datashark_agent/: __init__.py  main.py
datashark_agent/route/: __init__.py  info.py  process.py  processors.py
datashark_service/: __init__.py  main.py
ds_service/: __init__.py  __version__.py  main.py
